--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./images/icon-favicon.png">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/page.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
@@ -16,7 +17,7 @@
     <div id="personal-infos" class="section">
         <div id="info-card" class="main-card">
             <div id="info-text">
-                <h1 class="main-title">Antonio Marcone</h1>
+                <h1 id="main-title">Antonio Marcone</h1>
                 <p>Front end developer<br>Game developer<br>Writer</p>
                 <div id="info-links">
                     <a href="#">
@@ -57,7 +58,7 @@
             </div>
             <div class="skill-card">
                 <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/99/Unofficial_JavaScript_logo_2.svg" alt="JavaScript Logo">
-                <p class="label">MongoDB</p>
+                <p class="label">JavaScript</p>
             </div>
             <!-- <div class="skill-card">
                 <img class="icon" src="./images/MongoDB_Logomark_SpringGreen.png" alt="MongoDB Logo">
