--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Antonio Marcone</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./images/icon-favicon.png">
+    <link rel="icon" type="image/png" href="./images/favicon-red.png">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/page.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -17,7 +17,7 @@
     <div id="personal-infos" class="section">
         <div id="info-card" class="main-card">
             <div id="info-pic">
-                <img src="./images/IconaProfilo.png" alt="Profile picture">
+                <img src="./images/profile-icon.png" alt="Profile picture">
             </div>
             <div id="info-text">
                 <h1 id="main-title">Antonio Marcone</h1>
